k8s/apps/yamtrack/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: yamtrack
  namespace: yamtrack
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Yamtrack"
    gethomepage.dev/description: "Media tracking"
    gethomepage.dev/group: "media"
    gethomepage.dev/icon: "yamtrack.png"
    gethomepage.dev/href: "https://yamtrack.item.fyi"
    gethomepage.dev/siteMonitor: "http://yamtrack.yamtrack.svc.cluster.local"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=yamtrack"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`yamtrack.item.fyi`)
      services:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
  tls: {}
